--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Virtuf – Responsive HTML Template</title>
+    <title>福瑞游戏 FURRY-GAME</title>
 
     <!--== Favicon ==-->
     
@@ -100,7 +100,7 @@
                 <span></span>
                 <span></span>
               </button>
-              <a class="btn-theme btn-style" href="#/">Get A Free Quote <i class="icon-style icofont-double-right"></i></a>
+              <a class="btn-theme btn-style" href="#/">获取免费游戏 <i class="icon-style icofont-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -246,26 +246,26 @@
                 </span>
               </div>
               <div class="experience-time">
-                <div class="content">32<sup>+</sup> <span>Years of Experience</span></div>
+                <div class="content">11<sup>+</sup> <span>年的单机游戏开发经验</span></div>
               </div>
             </div>
           </div>
           <div class="col-lg-6 offset-lg-1">
             <div class="about-content">
               <div class="section-title xs-text-center" data-aos="fade-up" data-aos-duration="1000">
-                <h2 class="title">We Have Leadership Strong <span class="bottom-style">Experience</span> In Business.</h2>
+                <h2 class="title">我们在商业上有很强的 <span class="bottom-style">领导力</span></h2>
                 <div class="desc">
-                  <p class="mt-20">Lorem Ipsum is simply dummy text of the printing and typesetting industry standard dummy text ever <u class="text-theme-color2">since the 1500s, when an unknown printer took</u> type specimen book survived not only centuries.</p>
+                  <p class="mt-20">福瑞游戏是自从2020年以来一直从事开发 <u class="text-theme-color2">单机RPG游戏</u> 的一个小团队.</p>
                 </div>
               </div>
               <div class="list-icon-style" data-aos="fade-up" data-aos-duration="1200">
                 <ul>
-                  <li><i class="icon icofont-clock-time"></i> Save Your Time</li>
-                  <li><i class="icon icofont-money-bag"></i> Earn More Money</li>
-                  <li><i class="icon icofont-chart-growth"></i> Grow Business</li>
-                  <li><i class="icon icofont-live-support"></i> 24/7 Support</li>
-                  <li><i class="icon icofont-badge"></i> Trusted Partner</li>
-                  <li><i class="icon icofont-unique-idea"></i> Innovative Ideas</li>
+                  <li><i class="icon icofont-clock-time"></i> 经常更新</li>
+                  <li><i class="icon icofont-money-bag"></i> 用爱发电</li>
+                  <li><i class="icon icofont-chart-growth"></i> 业务广泛</li>
+                  <li><i class="icon icofont-live-support"></i> 节假日客服在线</li>
+                  <li><i class="icon icofont-badge"></i> 值得信赖的合作伙伴</li>
+                  <li><i class="icon icofont-unique-idea"></i> 创新思维</li>
                 </ul>
               </div>
             </div>
@@ -281,8 +281,8 @@
         <div class="row">
           <div class="col-sm-10 col-md-6 col-lg-5 offset-lg-1 col-xl-5 offset-xl-1">
             <div class="section-title xs-text-center" data-aos="fade-up" data-aos-duration="1000">
-              <h2 class="title">Successfully Complete <span class="text-theme-color bottom-style">2,500</span> Project.</h2>
-              <a href="#" class="btn btn-theme btn-border">Our Services <i class="icon icofont-long-arrow-right"></i></a>
+              <h2 class="title">已成功完成<span class="text-theme-color bottom-style">20<sup>+</sup></span> 个项目</h2>
+              <a href="#" class="btn btn-theme btn-border">我们的游戏 <i class="icon icofont-long-arrow-right"></i></a>
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-4 offset-xl-1">
@@ -333,13 +333,13 @@
         <div class="row">
           <div class="col-lg-8 col-xl-6 m-auto">
             <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
-              <h2 class="title">What We Do?</h2>
+              <h2 class="title">我们做些什么？</h2>
               <div class="separator-line mt-14">
                 <img class="me-1" src="static/picture/line-s2.png" alt="Virtuf-HasTech">
                 <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
               </div>
               <div class="desc">
-                <p class="mt-21">Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's standard dummy text ever since the printer took</p>
+                <p class="mt-21">福瑞游戏一直以来都只是一个用爱发电的游戏网站</p>
               </div>
             </div>
           </div>
@@ -354,8 +354,8 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>Web Development</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
+                <h4>网站维护和开发</h4>
+                <p>我们用心开发和维护自己的网站,在此感谢<a href="https://github.com/">Github</a>网站给了我们免费做网站的机会.</p>
                 <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
@@ -702,7 +702,7 @@
                 <img src="static/picture/line1.png" alt="Virtuf-HasTech">
                 <h5>Portfolio</h5>
               </div>
-              <h2 class="title">We Have Leadership Strong Experience In <span>Business.</span></h2>
+              <h2 class="title">We Have Leadership Strong Experience In<span>Business.</span></h2>
             </div>
           </div>
           <div class="col-sm-4 text-end">
