--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="col-6 col-sm-3 col-md-3 col-lg-2 pr-0">
           <div class="header-logo-area">
             <a href="">
-              <img class="logo-main" src="static/picture/logo.png" alt="Logo">
-              <img class="logo-light" src="static/picture/logo-light.png" alt="Logo">
+              <img class="logo-main" src="static/picture/furrygamelogo.png" alt="Logo">
+              <img class="logo-light" src="static/picture/furrygamelogo-light.png" alt="Logo">
             </a>
           </div>
         </div>
