--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </div>
                 <h4>网站维护和开发</h4>
                 <p>我们用心开发和维护自己的网站,在此感谢<a href="https://github.com/">Github</a>网站给了我们免费做网站的机会.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -376,7 +376,7 @@
                 </div>
                 <h4>Market Analysis</h4>
                 <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -481,7 +481,8 @@
           <div class="col-lg-8">
             <div class="faq-content" data-aos="fade-up" data-aos-duration="1100">
               <div class="section-title xs-text-center">
-                <h2 class="title text-white">You Are Confused! Question & <span class="bottom-color-style2">Answers.</span></h2>
+                <h2 class="title text-white">你有问题吗?  
+               <h2 class="title text-white"><span class="bottom-color-style2">问题 &答案.</span></h2>
               </div>
               <div class="accordian-content">
                 <div class="accordion" id="accordionStyle">
@@ -492,12 +493,12 @@
                           <i class="icon icon-plus icon_plus"></i>
                           <i class="icon icon-minus icon_minus-06"></i>
                         </span>
-                        How To Get BisNes Services?
+                       为什么我们要开展这个网站？
                       </button>
                     </div>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionStyle">
                       <div class="accordion-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry has industry's standard dummy text ever since the 1500s, when an unknown printer took of type and scrambled it to make a type specimen book. It has survived not only centuries, but also the leap into electronic.
+                        因为我们热爱这一个行业.
                       </div>
                     </div>
                   </div>
@@ -508,12 +509,12 @@
                           <i class="icon icon-plus icon_plus"></i>
                           <i class="icon icon-minus icon_minus-06"></i>
                         </span>
-                        How Can Start Digital Marketing Business?
+                       这个网站是谁开发的?
                       </button>
                     </div>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionStyle">
                       <div class="accordion-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry has industry's standard dummy text ever since the 1500s, when an unknown printer took of type and scrambled it to make a type specimen book. It has survived not only centuries, but also the leap into electronic.
+                       这个网站是由"没有兽装的屑(编程)"和"空阳(美术)"共同开发的,但是也要感谢<a href="services.html" class="btn btn-theme btn-theme-color2">Github<i class="icon icofont-long-arrow-right"></i></a>网站
                       </div>
                     </div>
                   </div>
@@ -524,12 +525,13 @@
                           <i class="icon icon-plus icon_plus"></i>
                           <i class="icon icon-minus icon_minus-06"></i>
                         </span>
-                        How To Get Easily Client From Online Marketplace?
+                        有问题在哪里反馈?
                       </button>
                     </div>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionStyle">
                       <div class="accordion-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry has industry's standard dummy text ever since the 1500s, when an unknown printer took of type and scrambled it to make a type specimen book. It has survived not only centuries, but also the leap into electronic.
+                       目前只支持在邮箱反馈.
+                       邮箱账号:furrygame@163.com(仅在法定节假回复)
                       </div>
                     </div>
                   </div>
@@ -540,19 +542,19 @@
                           <i class="icon icon-plus icon_plus"></i>
                           <i class="icon icon-minus icon_minus-06"></i>
                         </span>
-                        How Can I Payment Your Product?
+                        我能加入你们吗?
                       </button>
                     </div>
                     <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionStyle">
                       <div class="accordion-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry has industry's standard dummy text ever since the 1500s, when an unknown printer took of type and scrambled it to make a type specimen book. It has survived not only centuries, but also the leap into electronic.
+                        抱歉，我们暂时不接受加入.
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="text-center">
-                <a href="#" class="btn btn-theme btn-white btn-border">Click For Others Question & Answer <i class="icon icofont-long-arrow-right"></i></a>
+                <a href="#" class="btn btn-theme btn-white btn-border">点击查看更多的问题和答案 <i class="icon icofont-long-arrow-right"></i></a>
               </div>
             </div>
           </div>
