--- a/index.html
+++ b/index.html
@@ -600,80 +600,80 @@
                 <div class="swiper-wrapper team-slider">                  
                   <div class="swiper-slide team-member">
                     <div class="thumb">
-                      <img src="static/picture/1.jpg" alt="Image">
+                      <img src="static/picture/meiyoushouzhuangdexie.jpg" alt="Image">
                     </div>
                     <div class="content">
                       <div class="member-info">
                         <div class="separator-line">
                           <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                         </div>
-                        <h4 class="name">Hosea Steiner</h4>
-                        <h6 class="designation">UI/UX Designer</h6>
+                        <h4 class="name">没有兽装的屑</h4>
+                        <h6 class="designation">网页设计/开发人员</h6>
+                        <!-- Start Progress Item -->
+                        <div class="progress-item">
+                          <div class="progress-line">
+                            <div class="progress-bar-line" data-percent="100%"></div>
+                          </div>
+                          <div class="progress-info">
+                            <span class="title">专业度</span>
+                            <span class="percent"></span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="shape-style">
+                      <img class="shape-style1" src="static/picture/8.png" alt="Image">
+                      <img class="shape-style2" src="static/picture/9.png" alt="Image">
+                      <img class="shape-style3" src="static/picture/10.png" alt="Image">
+                    </div>
+                  </div>
+                  <div class="swiper-slide team-member">
+                    <div class="thumb">
+                      <img src="static/picture/kongyang.jpg" alt="Image">
+                    </div>
+                    <div class="content">
+                      <div class="member-info">
+                        <div class="separator-line">
+                          <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
+                        </div>
+                        <h4 class="name">空阳</h4>
+                        <h6 class="designation">美术/设计</h6>
+                        <!-- Start Progress Item -->
+                        <div class="progress-item">
+                          <div class="progress-line">
+                            <div class="progress-bar-line" data-percent="85%"></div>
+                          </div>
+                          <div class="progress-info">
+                            <span class="title">专业度</span>
+                            <span class="percent"></span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="shape-style">
+                      <img class="shape-style1" src="static/picture/8.png" alt="Image">
+                      <img class="shape-style2" src="static/picture/9.png" alt="Image">
+                      <img class="shape-style3" src="static/picture/10.png" alt="Image">
+                    </div>
+                  </div>
+                  <div class="swiper-slide team-member">
+                    <div class="thumb">
+                      <img src="static/picture/puluo.jpg" alt="Image">
+                    </div>
+                    <div class="content">
+                      <div class="member-info">
+                        <div class="separator-line">
+                          <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
+                        </div>
+                        <h4 class="name">普罗</h4>
+                        <h6 class="designation">网页设计/美术</h6>
                         <!-- Start Progress Item -->
                         <div class="progress-item">
                           <div class="progress-line">
                             <div class="progress-bar-line" data-percent="90%"></div>
                           </div>
                           <div class="progress-info">
-                            <span class="title">Professional Skill</span>
-                            <span class="percent"></span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="shape-style">
-                      <img class="shape-style1" src="static/picture/8.png" alt="Image">
-                      <img class="shape-style2" src="static/picture/9.png" alt="Image">
-                      <img class="shape-style3" src="static/picture/10.png" alt="Image">
-                    </div>
-                  </div>
-                  <div class="swiper-slide team-member">
-                    <div class="thumb">
-                      <img src="static/picture/2.jpg" alt="Image">
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <div class="separator-line">
-                          <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
-                        </div>
-                        <h4 class="name">Rosario Matthew</h4>
-                        <h6 class="designation">Web Developer</h6>
-                        <!-- Start Progress Item -->
-                        <div class="progress-item">
-                          <div class="progress-line">
-                            <div class="progress-bar-line" data-percent="70%"></div>
-                          </div>
-                          <div class="progress-info">
-                            <span class="title">Professional Skill</span>
-                            <span class="percent"></span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="shape-style">
-                      <img class="shape-style1" src="static/picture/8.png" alt="Image">
-                      <img class="shape-style2" src="static/picture/9.png" alt="Image">
-                      <img class="shape-style3" src="static/picture/10.png" alt="Image">
-                    </div>
-                  </div>
-                  <div class="swiper-slide team-member">
-                    <div class="thumb">
-                      <img src="static/picture/3.jpg" alt="Image">
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <div class="separator-line">
-                          <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
-                        </div>
-                        <h4 class="name">Tyson Holiday</h4>
-                        <h6 class="designation">Digital Marketer</h6>
-                        <!-- Start Progress Item -->
-                        <div class="progress-item">
-                          <div class="progress-line">
-                            <div class="progress-bar-line" data-percent="80%"></div>
-                          </div>
-                          <div class="progress-info">
-                            <span class="title">Professional Skill</span>
+                            <span class="title">专业度</span>
                             <span class="percent"></span>
                           </div>
                         </div>
@@ -702,13 +702,13 @@
             <div class="section-title xs-text-center">
               <div class="subtitle-content xs-d-i-flex">
                 <img src="static/picture/line1.png" alt="Virtuf-HasTech">
-                <h5>Portfolio</h5>
+                <h5>FURRY GAME</h5>
               </div>
-              <h2 class="title">We Have Leadership Strong Experience In<span>Business.</span></h2>
+              <h2 class="title">我们有许多开发游戏的<span>经验</span>.</h2>
             </div>
           </div>
           <div class="col-sm-4 text-end">
-            <a href="#" class="btn btn-theme btn-border btn-theme-color2 xs-d-none">All Projects <i class="icon icofont-long-arrow-right"></i></a>
+            <a href="#" class="btn btn-theme btn-border btn-theme-color2 xs-d-none">所有项目<i class="icon icofont-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
