--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="header-align">
             <div class="header-navigation-area navigation-style-two">
               <ul class="main-menu nav justify-content-center">
-                <li class="active"><a href="">主页</a></li>
+                <li class="active"><a href="">主页&nbsp;</a></li>
                 <li><a href="about.html">关于</a></li>
                 <li class="has-submenu"><a href="services.html">服务</a>
                   <ul class="submenu-nav">
@@ -582,13 +582,14 @@
         <div class="row">
           <div class="col-lg-8 m-auto">
             <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
-              <h2 class="title">We’ve Awesome Team</h2>
+              <h2 class="title">我们的开发团队&nbsp;</h2>
               <div class="separator-line mt-14">
                 <img class="me-1" src="static/picture/line-s2.png" alt="Virtuf-HasTech">
                 <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
               </div>
               <div class="desc">
-                <p class="mt-21">Lorem Ipsum is simply dummy text of the printing and typesetting industry has been <br>the industry's standard dummy text ever since the printer took</p>
+                <p class="mt-21">感谢下面这些人为我们网站作出的贡献</p>
+                <p class="mt-21">&nbsp;</p>
               </div>
             </div>
           </div>
@@ -607,7 +608,7 @@
                         <div class="separator-line">
                           <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                         </div>
-                        <h4 class="name">没有兽装的屑</h4>
+                        <a href="https://furrygame.github.io/user/%E6%B2%A1%E6%9C%89%E5%85%BD%E8%A3%85%E7%9A%84%E5%B1%91/%E4%B8%BB%E9%A1%B5.html"><h4 class="name">没有兽装的屑</h4></a>
                         <h6 class="designation">网页设计/开发人员</h6>
                         <!-- Start Progress Item -->
                         <div class="progress-item">
@@ -636,7 +637,7 @@
                         <div class="separator-line">
                           <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                         </div>
-                        <h4 class="name">空阳</h4>
+                        <a href="https://furrygame.github.io/user/%E7%A9%BA%E9%98%B3/%E4%B8%BB%E9%A1%B5.html"><h4 class="name">空阳</h4></a>
                         <h6 class="designation">美术/设计</h6>
                         <!-- Start Progress Item -->
                         <div class="progress-item">
@@ -1004,14 +1005,15 @@
               <div class="section-title">
                 <div class="subtitle-content">
                   <img src="static/picture/line1.png" alt="Virtuf-HasTech">
-                  <h5>Contact Us.</h5>
+                  <h5>联系我们.</h5>
                 </div>
-                <h2 class="title">Contact Us For Any Information of <span class="bottom-style">Company.</span></h2>
+                <h2 class="title">联系我们以获得更多的&nbsp;</h2>
+                <h2 class="title"><span class="bottom-style">信息.</span></h2>
               </div>
             </div>
           </div>
           <div class="col-md-3 col-lg-4 sm-text-start text-end">
-            <a href="contact.html" class="btn btn-theme" data-aos="fade-up" data-aos-duration="1100">Contact Now <i class="icon icofont-long-arrow-right"></i></a>
+            <a href="contact.html" class="btn btn-theme" data-aos="fade-up" data-aos-duration="1100">现在联系 <i class="icon icofont-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -1034,10 +1036,10 @@
                   <img class="icon-img" src="static/picture/c1.png" alt="Icon">
                 </div>
                 <div class="content">
-                  <h4>Call Us.</h4>
+                  <h4>打电话给我们.</h4>
                   <img class="line-icon" src="static/picture/line-s1.png" alt="Icon">
-                  <a href="tel://+00(88)123456789">+00 (88) 123 456 789</a>
-                  <a href="tel://+88864569784654">+88 864 569 784 654</a>
+                  <a href="tel://+86 123456789">暂不支持</a>
+                  <a href="tel://+88 864569784654">暂不支持</a>
                 </div>
               </div>
               <div class="contact-info-item">
@@ -1045,10 +1047,10 @@
                   <img class="icon-img" src="static/picture/c2.png" alt="Icon">
                 </div>
                 <div class="content">
-                  <h4>Email.</h4>
+                  <h4>我们的邮箱&nbsp;</h4>
                   <img class="line-icon" src="static/picture/line-s1.png" alt="Icon">
-                  <a href="mailto://support24@gmail.com">support24@gmail.com</a>
-                  <a href="mailto://infobisnis@gmail.com">infobisnis@gmail.com</a>
+                  <a href="mailto://support24@gmail.com">furrygame@163.com&nbsp;</a>
+                  <a href="mailto://infobisnis@gmail.com">2024659553@qq.com&nbsp;</a>
                 </div>
               </div>
               <div class="contact-info-item">
@@ -1056,9 +1058,11 @@
                   <img class="icon-img" src="static/picture/c3.png" alt="Icon">
                 </div>
                 <div class="content">
-                  <h4>Location.</h4>
+                  <h4>地址</h4>
                   <img class="line-icon" src="static/picture/line-s1.png" alt="Icon">
-                  <p>92 St., New York, <br>Ny 10013, USA</p>
+                  <p>北京市-东城区</p>
+                  <p>&nbsp; &nbsp; &nbsp; 1502号</p>
+                  <p>福瑞大厦305&nbsp;</p>
                 </div>
               </div>
             </div>
@@ -1072,13 +1076,13 @@
           <div class="widget-item mt-0">
             <div class="about-widget">
               <a class="footer-logo" href="">
-                <img src="static/picture/logo.png" alt="Logo">
+                <img src="static/picture/furrygamelogo.png" alt="Logo">
               </a>
-              <p>Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum has industry's standard dummy text ever printer took a galley.</p>
+              <p>如果您填写了您的邮箱，那么您遍可以收到我们的邮箱信息.</p>
               <div class="widget-newsletter">
                 <form action="#">
-                  <input type="email" class="form-control" placeholder="Enter your email">
-                  <button type="submit" class="btn btn-theme">Subscribe Now <i class="icon icofont-long-arrow-right"></i></button>
+                  <input type="email" class="form-control" placeholder="输入您的邮箱">
+                  <button type="submit" class="btn btn-theme">立即订阅我们的信息 <i class="icon icofont-long-arrow-right"></i></button>
                 </form>
               </div>
             </div>
@@ -1086,7 +1090,7 @@
         </div>
         <div class="col-md-8 col-lg-6 col-xl-6">
           <div class="widget-item menu-wrap-two-column">
-            <h4 class="widget-title">All Services</h4>
+            <h4 class="widget-title">所有服务&nbsp;</h4>
             <img class="line-shape" src="static/picture/line-s1.png" alt="Virtuf-HasTech">
             <nav class="widget-menu-wrap">
               <div class="row">
@@ -1116,7 +1120,7 @@
         </div>
         <div class="col-md-4 col-lg-2 col-xl-2 lg-pr-0">
           <div class="widget-item menu-wrap-column">
-            <h4 class="widget-title">Useful Links</h4>
+            <h4 class="widget-title">有用的链接&nbsp;</h4>
             <img class="line-shape" src="static/picture/line-s1.png" alt="Virtuf-HasTech">
             <nav class="widget-menu-wrap">
               <ul class="nav-menu nav">
@@ -1138,7 +1142,7 @@
           <div class="row align-items-center">
             <div class="col-md-5 col-lg-5 col-xl-4">
               <div class="widget-copyright">
-                <p>Copyright &copy; 2023.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                <p>Copyright &copy; 2023.福瑞游戏版权所有.</p>
               </div>
             </div>
             <div class="col-md-5 col-lg-4 col-xl-4">
