--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>Market Analysis</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
+                <h4>市场分析</h4>
+                <p>暂无简介</p>
                 <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
@@ -394,9 +394,9 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>Brand Identity</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <h4>游戏识别</h4>
+                <p>暂无简介&nbsp;</p>
+                <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -414,9 +414,10 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>Business Consultation</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <h4>记录福瑞类型游戏&nbsp;</h4>
+                <p>搜寻福瑞类型游戏后并记录在这里</p>
+                
+<a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -434,9 +435,9 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>SEO Marketing</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <h4>搜寻福瑞类型游戏&nbsp;</h4>
+                <p>在网上不定时寻找福瑞类型游戏</p>
+                <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -454,9 +455,9 @@
                 <div class="separator-line">
                   <img src="static/picture/line-s1.png" alt="Virtuf-HasTech">
                 </div>
-                <h4>UX & UI Design</h4>
-                <p>Lorem Ipsum is simply dummy text the printing and typesetting industry has been the industry's standard.</p>
-                <a href="service-details.html" class="btn-link">Read More <i class="icon icofont-arrow-right"></i></a>
+                <h4>网站设计&nbsp;</h4>
+                <p>设计我们的网站</p>
+                <a href="service-details.html" class="btn-link">阅读更多 <i class="icon icofont-arrow-right"></i></a>
               </div>
               <div class="icon-shape">
                 <img class="shape-img1" src="static/picture/s11.png" alt="Icon">
@@ -482,7 +483,7 @@
             <div class="faq-content" data-aos="fade-up" data-aos-duration="1100">
               <div class="section-title xs-text-center">
                 <h2 class="title text-white">你有问题吗?  
-               <h2 class="title text-white"><span class="bottom-color-style2">问题 &答案.</span></h2>
+               <h2 class="title text-white"><span class="bottom-color-style2">问题 & 答案.</span></h2>
               </div>
               <div class="accordian-content">
                 <div class="accordion" id="accordionStyle">
