--- a/index.html
+++ b/index.html
@@ -1050,8 +1050,8 @@
                 <div class="content">
                   <h4>我们的邮箱&nbsp;</h4>
                   <img class="line-icon" src="static/picture/line-s1.png" alt="Icon">
-                  <a href="mailto://support24@gmail.com">furrygame@163.com&nbsp;</a>
-                  <a href="mailto://infobisnis@gmail.com">2024659553@qq.com&nbsp;</a>
+                  <a href="mailto:furrygame@163.com">furrygame@163.com&nbsp;</a>
+                  <a href="mailto:2024659553@qq.com">2024659553@qq.com&nbsp;</a>
                 </div>
               </div>
               <div class="contact-info-item">
