--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>About – Virtuf – Responsive HTML Template</title>
+    <title>关于福瑞游戏</title>
 
     <!--== Favicon ==-->
     
@@ -61,8 +61,8 @@
         <div class="col-6 col-sm-3 col-md-3 col-lg-2 pr-0">
           <div class="header-logo-area">
             <a href="index.html">
-              <img class="logo-main" src="static/picture/logo.png" alt="Logo">
-              <img class="logo-light" src="static/picture/logo-light.png" alt="Logo">
+              <img class="logo-main" src="static/picture/furrygamelogo.png" alt="Logo">
+              <img class="logo-light" src="static/picture/furrygamelogo-light.png" alt="Logo">
             </a>
           </div>
         </div>
